# AstroGen

./: .gitignore  Cargo.toml  README.md
assets/shaders/: compute_asteroid_height.wgsl  compute_asteroid_shape.wgsl  compute_normalize_normals.wgsl  compute_normals.wgsl  crater.wgsl  math.wgsl  noise.wgsl  normal_utils.wgsl  triplanar_fragment.wgsl  utils.wgsl
src/: asteroid_mesh.rs  asteroid_mesh_builder.rs  compute.rs  compute_data_sender.rs  compute_events.rs  compute_shaders.rs  crater_setting_widget.rs  crater_settings.rs  gltf_exporter.rs  light.rs  main.rs  main_camera.rs  ridge_noise_setting_widget.rs  ridge_noise_settings.rs  simple_noise_setting_widget.rs  simple_noise_settings.rs  sphere_mesh.rs  ui_asteroid_settings.rs  utils.rs
src/compute/: asteroid_height_compute_shader.rs  asteroid_terrain_generator.rs  event_handler.rs  mod.rs
src/data/: asteroid_settings.rs  compute_data.rs  mod.rs
src/settings/: asteroid_settings.rs  crater_settings.rs  mod.rs  ridge_noise_settings.rs  simple_noise_settings.rs
src/ui_widgets/: crater_setting_widget.rs  mod.rs  ridge_noise_setting_widget.rs  simple_noise_setting_widget.rs
