[package]
name = "AstroGen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14.1", default-features = false, features = ["bevy_asset", "bevy_winit", "bevy_core_pipeline", "bevy_text", "x11"]}
rand = "0.8.5"
sickle_ui = "0.2.3"
bevy_easy_compute = "0.14.0"
bevy_embedded_assets = "0.11.0"
iyes_perf_ui = "0.3.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
opt-level = "z"
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
strip = "symbols"  # Or "debuginfo" for even smaller binaries