[package]
name = "AstroGen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14.1"
rand = "0.8.5"
sickle_ui = "0.2.3"
bevy_easy_compute = "0.14.0"
bevy_embedded_assets = "0.11.0"
iyes_perf_ui = "0.3.0"
gltf = "1.4.1"
gltf-json= "1.4.1"

[features]
diagnostics = []

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
opt-level = "z"
codegen-units = 1
lto = "thin"
strip = "symbols"  # Or "debuginfo" for even smaller binaries