[package]
name = "AstroGen"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
rand = "0.8.5"
bevy_easy_compute = "0.14.0"
bevy_embedded_assets = "0.11.0"
gltf = "1.4.1"
gltf-json= "1.4.1"
bytemuck = "1.17.1"
bevy_egui = { version = "0.29.0", default-features = false , features = ["default_fonts", "render"]}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
lto = "thin"
strip = "symbols"